progress fix on mobiles

--- a/css/phonon.css
+++ b/css/phonon.css
@@ -685,31 +685,17 @@ button,
   transition: width 0.3s linear;
 }
 .progress .indeterminate {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 40%;
   background-color: #2895e7;
 }
-.progress.active .indeterminate:before {
-  content: '';
-  position: absolute;
-  background-color: inherit;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  will-change: left, right;
-  -webkit-animation: indeterminate 2.1s cubic-bezier(0.65, 0.815, 0.735, 0.395) infinite;
-  animation: indeterminate 2.1s cubic-bezier(0.65, 0.815, 0.735, 0.395) infinite;
-}
-.progress.active .indeterminate:after {
-  content: '';
-  position: absolute;
-  background-color: inherit;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  will-change: left, right;
-  -webkit-animation: indeterminate-short 2.1s cubic-bezier(0.165, 0.84, 0.44, 1) infinite;
-  animation: indeterminate-short 2.1s cubic-bezier(0.165, 0.84, 0.44, 1) infinite;
-  -webkit-animation-delay: 1.15s;
-  animation-delay: 1.15s;
+.progress.active .indeterminate {
+  -webkit-animation: indeterminate-short 1.3s cubic-bezier(0.165, 0.84, 0.44, 1) infinite;
+  animation: indeterminate-short 1.3s cubic-bezier(0.165, 0.84, 0.44, 1) infinite;
 }
 @-webkit-keyframes indeterminate {
   0% {
@@ -787,31 +773,10 @@ button,
   display: inline-block;
   margin-bottom: 0;
 }
-.btn-progress:disabled .progress .indeterminate:before,
-.btn-progress.in-progress .progress .indeterminate:before {
-  content: '';
-  position: absolute;
-  background-color: inherit;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  will-change: left, right;
-  -webkit-animation: indeterminate 2.1s cubic-bezier(0.65, 0.815, 0.735, 0.395) infinite;
-  animation: indeterminate 2.1s cubic-bezier(0.65, 0.815, 0.735, 0.395) infinite;
-}
-.btn-progress:disabled .progress .indeterminate:after,
-.btn-progress.in-progress .progress .indeterminate:after {
-  content: '';
-  position: absolute;
-  background-color: inherit;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  will-change: left, right;
-  -webkit-animation: indeterminate-short 2.1s cubic-bezier(0.165, 0.84, 0.44, 1) infinite;
-  animation: indeterminate-short 2.1s cubic-bezier(0.165, 0.84, 0.44, 1) infinite;
-  -webkit-animation-delay: 1.15s;
-  animation-delay: 1.15s;
+.btn-progress:disabled .progress .indeterminate,
+.btn-progress.in-progress .progress .indeterminate {
+  -webkit-animation: indeterminate-short 1.3s cubic-bezier(0.165, 0.84, 0.44, 1) infinite;
+  animation: indeterminate-short 1.3s cubic-bezier(0.165, 0.84, 0.44, 1) infinite;
 }
 .btn-primary .determinate,
 .btn-primary .indeterminate {
